--- a/CSAdminApp/Reportes/ReporteAsistencia.rdlc
+++ b/CSAdminApp/Reportes/ReporteAsistencia.rdlc
@@ -1,75 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Report xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner" xmlns="http://schemas.microsoft.com/sqlserver/reporting/2008/01/reportdefinition">
-  <DataSources>
-    <DataSource Name="CSAdminAppClases">
-      <ConnectionProperties>
-        <DataProvider>System.Data.DataSet</DataProvider>
-        <ConnectString>/* Local Connection */</ConnectString>
-      </ConnectionProperties>
-      <rd:DataSourceID>901e5138-e6d2-46d9-8af7-99e619ff1a94</rd:DataSourceID>
-    </DataSource>
-  </DataSources>
-  <DataSets>
-    <DataSet Name="DataSetAsistencia">
-      <Fields>
-        <Field Name="Desde">
-          <DataField>Desde</DataField>
-          <rd:TypeName>System.DateTime</rd:TypeName>
-        </Field>
-        <Field Name="Hasta">
-          <DataField>Hasta</DataField>
-          <rd:TypeName>System.Nullable`1[[System.DateTime, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
-        </Field>
-        <Field Name="Id">
-          <DataField>Id</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="IdPersona">
-          <DataField>IdPersona</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="Motivo">
-          <DataField>Motivo</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Personas">
-          <DataField>Personas</DataField>
-          <rd:TypeName>CSAdminApp.Clases.Personas</rd:TypeName>
-        </Field>
-      </Fields>
-      <Query>
-        <DataSourceName>CSAdminAppClases</DataSourceName>
-        <CommandText>/* Local Query */</CommandText>
-      </Query>
-      <rd:DataSetInfo>
-        <rd:DataSetName>CSAdminApp.Clases</rd:DataSetName>
-        <rd:TableName>CSAdminBDEntities</rd:TableName>
-        <rd:ObjectDataSourceSelectMethod>Inasistencias</rd:ObjectDataSourceSelectMethod>
-        <rd:ObjectDataSourceType>CSAdminApp.Clases.CSAdminBDEntities, Clases.ModelBD.Designer.cs, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
-      </rd:DataSetInfo>
-    </DataSet>
-  </DataSets>
+<Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2008/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner">
   <Body>
     <ReportItems>
       <Tablix Name="Tablix1">
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.98425in</Width>
+              <Width>2.5cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.98425in</Width>
+              <Width>2.5cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.98425in</Width>
+              <Width>2.49999cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.98425in</Width>
+              <Width>2.49999cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.23622in</Height>
+              <Height>0.6cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -194,7 +145,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.23622in</Height>
+              <Height>0.6cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -332,7 +283,7 @@
           <TablixMembers>
             <TablixMember>
               <TablixHeader>
-                <Size>0.98425in</Size>
+                <Size>2.5cm</Size>
                 <CellContents>
                   <Textbox Name="Textbox9">
                     <CanGrow>true</CanGrow>
@@ -341,7 +292,7 @@
                       <Paragraph>
                         <TextRuns>
                           <TextRun>
-                            <Value>Id Persona</Value>
+                            <Value>Nombre</Value>
                             <Style />
                           </TextRun>
                         </TextRuns>
@@ -379,23 +330,23 @@
                 </SortExpression>
               </SortExpressions>
               <TablixHeader>
-                <Size>0.98425in</Size>
+                <Size>2.5cm</Size>
                 <CellContents>
-                  <Textbox Name="IdPersona">
+                  <Textbox Name="Personas">
                     <CanGrow>true</CanGrow>
                     <KeepTogether>true</KeepTogether>
                     <Paragraphs>
                       <Paragraph>
                         <TextRuns>
                           <TextRun>
-                            <Value>=Fields!IdPersona.Value</Value>
+                            <Value>=Fields!Personas.Value</Value>
                             <Style />
                           </TextRun>
                         </TextRuns>
                         <Style />
                       </Paragraph>
                     </Paragraphs>
-                    <rd:DefaultName>IdPersona</rd:DefaultName>
+                    <rd:DefaultName>Personas</rd:DefaultName>
                     <Style>
                       <Border>
                         <Color>LightGrey</Color>
@@ -421,7 +372,7 @@
         <Top>0.29104cm</Top>
         <Left>2.46062cm</Left>
         <Height>1.2cm</Height>
-        <Width>12.5cm</Width>
+        <Width>12.49998cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -435,7 +386,7 @@
   <Width>6.5in</Width>
   <Page>
     <PageHeader>
-      <Height>2.57591cm</Height>
+      <Height>3.30412cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -470,6 +421,19 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
+        <Line Name="Line1">
+          <Top>2.56328cm</Top>
+          <Left>1.03188cm</Left>
+          <Height>0cm</Height>
+          <Width>15.47812cm</Width>
+          <ZIndex>1</ZIndex>
+          <Style>
+            <Border>
+              <Style>Solid</Style>
+              <Width>2pt</Width>
+            </Border>
+          </Style>
+        </Line>
       </ReportItems>
       <Style>
         <Border>
@@ -486,6 +450,56 @@
     <ColumnSpacing>0.13cm</ColumnSpacing>
     <Style />
   </Page>
-  <rd:ReportID>c616d40a-a25a-470a-b219-a39a1af82db1</rd:ReportID>
+  <AutoRefresh>0</AutoRefresh>
+  <DataSources>
+    <DataSource Name="CSAdminAppClases">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>901e5138-e6d2-46d9-8af7-99e619ff1a94</rd:DataSourceID>
+    </DataSource>
+  </DataSources>
+  <DataSets>
+    <DataSet Name="DataSetAsistencia">
+      <Query>
+        <DataSourceName>CSAdminAppClases</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="Desde">
+          <DataField>Desde</DataField>
+          <rd:TypeName>System.DateTime</rd:TypeName>
+        </Field>
+        <Field Name="Hasta">
+          <DataField>Hasta</DataField>
+          <rd:TypeName>System.Nullable`1[[System.DateTime, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
+        </Field>
+        <Field Name="Id">
+          <DataField>Id</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="IdPersona">
+          <DataField>IdPersona</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="Motivo">
+          <DataField>Motivo</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="Personas">
+          <DataField>Personas</DataField>
+          <rd:TypeName>CSAdminApp.Clases.Personas</rd:TypeName>
+        </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>CSAdminApp.Clases</rd:DataSetName>
+        <rd:TableName>CSAdminBDEntities</rd:TableName>
+        <rd:ObjectDataSourceSelectMethod>Inasistencias</rd:ObjectDataSourceSelectMethod>
+        <rd:ObjectDataSourceType>CSAdminApp.Clases.CSAdminBDEntities, Clases.ModelBD.Designer.cs, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+      </rd:DataSetInfo>
+    </DataSet>
+  </DataSets>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
+  <rd:ReportID>c616d40a-a25a-470a-b219-a39a1af82db1</rd:ReportID>
 </Report>
